[tool.poetry]
name = "temporal-retriever"
version = "0.1.4"
description = ""
authors = ["chrisaddy <chris.william.addy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
prophet = "^1.1.5"
u8darts = "^0.28.0"
numpy = "^1.26.4"
darts = "^0.28.0"
icecream = "^2.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
jupyterlab = "^4.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
