[project]
name = "temporal-retriever"
version = "0.5.0"
description = "Rapid Time Series, LLM Aware"
authors = [{name = "chrisaddy", email = "chris.william.addy@gmail.com"}]
license = "MIT"
readme = "README.md"

dependencies = [
  "fastapi>=0.110.0,<0.111.0",
  "uvicorn>=0.29.0,<0.30.0",
  "prophet>=1.1.5,<1.2.0",
  "numpy>=1.26.4,<1.27.0",
  "pydash>=8.0.0,<9.0.0",
  "loguru>=0.7.2,<0.8.0",
  "statsmodels>=0.14.1,<0.15.0",
  "pandas-stubs>=2.2.1,<2.3.0",
  "icecream"
]



[project.optional-dependencies]
dev = [
    "pytest>=8.1.1,<8.2.0",
    "jupyterlab>=4.1.5,<4.2.0",
    "ipython>=8.22.2,<8.23.0",
    "icecream>=2.1.3,<2.2.0",
    "dephell"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
